--- a/Opsi.Web/src/app.css
+++ b/Opsi.Web/src/app.css
@@ -1,3 +1,7 @@
+h3 svg {
+    margin-right: 1rem;
+}
+
 .bx--accordion__content {
     padding-right: 0 !important;
 }
@@ -71,6 +75,10 @@
     bottom: 2px;
     margin-left: 0.25rem;
     position: relative;
+}
+
+.inline-block {
+    display: inline-block;
 }
 
 .user-assignment .bx--form-item {
