--- a/Opsi.Web/src/app.css
+++ b/Opsi.Web/src/app.css
@@ -78,7 +78,7 @@ h3 svg {
 }
 
 .inline-block {
-    display: inline-block;
+    display: inline-block !important;
 }
 
 .user-assignment .bx--form-item {
